[package]
name = "cranelift_eval"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
cranelift = { version = "0.113.1", features = ["jit", "module"] }
fasteval = "0.2.4"
indexmap = "2.6.0"
nom = "7.1.3"
random = "0.14.0"
regex = "1.11.1"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.3"
